
Add SST MLD assimilation
internal_step.F, mod_assim.F, mod_input.F, mod_main.F,  mod_ncdio.F,  namelist.F, mod_mld_rho.F

Add vortex force
adv_uv_edge_gcn.F, adv_uv_edge_gcy.F, fvcom.F, internal_step.F,  mod_ncdio.F,  mod_wave_current_interaction.F

Add vegetation module
adv_uv_edge_gcn.F, extuv_edge.F, fvcom.F, internal_step.F, mod_gotm.F, mod_ncdio.F, namelist.F, open_all.F, swancom1.F, swancom2.F, swanmain.F, swanpre1.F, swmod1.F, swmod2.F, vdif_q.F, mod_vegetation.F, makefile

Add mod sediment heat flux
bcond_gcn.F, vdif_ts.F, mod_heatflux_sediment.F

Add mod_vector_projection
internal_step.F,  fvcom.F,  mod_main.F,  mod_ncdio.F,  mod_vector_projection.F, makefile

add isonb3
grid_metrics.F,  mod_main.F,  mod_semi_implicit.F

Remove +1 from dim IOBCN
mod_obcs.F, mod_scal.F, mod_sed_cstms.F

Add ice_in
bcond_gcn.F

Mod_nesting index change
mod_nesting.F, mod_types.F

Fixes for t assimilation; abs current, OI_TS limit_control, and add ramp
mod_assim.F

Gotm initialise u_taub to 0
mod_gotm.F

Implement spherical and wet-dry in non-hydro
mod_non_hydro.F

Add offset freshwater flux in mpdata and single precision fix for stability in mod_wqm
mod_wqm.F

Update KDMAX from 5 to 3 based on MELLOR(2015)
mod_wave_current_interaction.F 

Remove coriolis adjustment for very small values in setup
mod_setup.F

Adjustment to XFLUX in spherical
adv_uv_edge_gcn.F

Fixes in mod_input for in_tri and add siglev
mod_input.F

Add missing netcdf4
enk_ncdio.F, mod_sparse_timeseries.F, mod_station_timeseries.F

Non-hydro WW change
mod_startup.F

Remove call to rho mean
fvcom.F

Add NUOPC option
adv_uv_edge_gcy.F, mod_main.F, extuv_edge.F, fvcom.F

Tidy up tvd and smoother
adv_s.F, adv_t.F, mod_tvd.F, mod_wqm.F, mod_bio_3d.F

Add heating type surface
mod_input.F, vdif_ts.F

Add wind_Stress methods
mod_heatflux.F, mod_input.F,  mod_main.F, mod_ncdio.F, bcond_gcn.F, bcond_gcy.F

Update coare methods, especially air pressure in coare40
coare26z.F, coare40vn.F, mod_force.F