@@ -372,8 +372,15 @@ CONTAINS
 
     BOTTOM_ROUGHNESS_MINIMUM = -1.0_SP
     BOTTOM_ROUGHNESS_LENGTHSCALE = -1.0_SP
+! Changed by Siqi Li@2015/08/29
+!    BOTTOM_ROUGHNESS_TYPE   = "'"//TRIM(BR_ORIG)//"', or '"&
+!         &//TRIM(BR_GOTM)//"'; Select your bottom roughness equation
+!         (brough.F)"
     BOTTOM_ROUGHNESS_TYPE   = "'"//TRIM(BR_ORIG)//"', or '"&
-         &//TRIM(BR_GOTM)//"'; Select your bottom roughness equation (brough.F)"
+         &//TRIM(BR_GOTM)//"', or '"&
+         &//TRIM(BR_UDEF)//"'; Select your bottom roughness equation (brough.F)"
+! Siqi Li
+
     BOTTOM_ROUGHNESS_KIND = "Options:"//TRIM(CNSTNT)//","//TRIM(STTC)
     BOTTOM_ROUGHNESS_FILE =trim(casename)//"_brf.nc"
     
@@ -2131,10 +2138,10 @@ CONTAINS
 
   END SUBROUTINE LOAD_HORIZONTAL_MIXING_COEFFICIENT
 
-  SUBROUTINE LOAD_BOTTOM_ROUGHNESS(Z0,NUNI_CBCMIN)
+  SUBROUTINE LOAD_BOTTOM_ROUGHNESS(Z0)
     USE CONTROL
     IMPLICIT NONE
-    REAL(SP),ALLOCATABLE :: Z0(:),NUNI_CBCMIN(:)
+    REAL(SP),ALLOCATABLE :: Z0(:)
     TYPE(NCFILE), POINTER :: NCF
     TYPE(NCVAR),  POINTER :: VAR
     TYPE(NCDIM),  POINTER :: DIM1
@@ -2168,17 +2175,48 @@ CONTAINS
     CALL NC_READ_VAR(VAR)
     CALL NC_DISCONNECT(VAR)
 
-    ! FIND THE 'NUNI_CBCMIN' variable
-    VAR => FIND_VAR(NCF,'cbcmin',FOUND)
-    IF(.not. FOUND) CALL FATAL_ERROR &
-         & ("COULD NOT FIND BOTTOM_ROUGHNESS_FILE VARIABLE 'cbcmin' in:",&
-         & "FILE NAME: "//TRIM(BOTTOM_ROUGHNESS_FILE))
-
-    CALL NC_CONNECT_AVAR(VAR,NUNI_cbcmin)
-    CALL NC_READ_VAR(VAR)
-    CALL NC_DISCONNECT(VAR)
     
   END SUBROUTINE LOAD_BOTTOM_ROUGHNESS
+! Added by Siqi Li@2015/08/29
+  SUBROUTINE LOAD_DRAG_COEFFICIENT(Cd_UD)
+    USE CONTROL
+    IMPLICIT NONE
+    REAL(SP),ALLOCATABLE :: Cd_UD(:)
+    TYPE(NCFILE), POINTER :: NCF
+    TYPE(NCVAR),  POINTER :: VAR
+    TYPE(NCDIM),  POINTER :: DIM1
+    TYPE(NCDIM),  POINTER :: DIM2
+    integer status,I,IERR
+
+    LOGICAL FOUND
+
+    ! FIND THE Bottom Roughness FILE OBJECT
+    NCF => FIND_FILE(FILEHEAD,trim(BOTTOM_ROUGHNESS_FILE),FOUND)
+    IF(.not. FOUND) CALL FATAL_ERROR &
+         & ("COULD NOT FIND BOTTOM_ROUGHNESS_FILE FILE OBJECT",&
+         & "FILE NAME: "//TRIM(BOTTOM_ROUGHNESS_FILE))
+
+    DIM1 => FIND_DIM(NCF,'nele',FOUND)
+    IF(.not. FOUND) CALL FATAL_ERROR &
+         & ("COULD NOT FIND BOTTOM_ROUGHNESS_FILE DIMENSION 'nele' in:",&
+         & "FILE NAME: "//TRIM(BOTTOM_ROUGHNESS_FILE))
+    IF (DIM1%DIM /= NGL)CALL FATAL_ERROR &
+         & ("Dimension 'nele' in the BOTTOM_ROUGHNESS_FILE does not match NGL for this model?",&
+         & "FILE NAME: "//TRIM(BOTTOM_ROUGHNESS_FILE))
+
+
+    ! FIND THE 'Cd' variable
+    VAR => FIND_VAR(NCF,'Cd',FOUND)
+    IF(.not. FOUND) CALL FATAL_ERROR &
+         & ("COULD NOT FIND BOTTOM_ROUGHNESS_FILE VARIABLE 'Cd' in:",&
+         & "FILE NAME: "//TRIM(BOTTOM_ROUGHNESS_FILE))
+
+    CALL NC_CONNECT_AVAR(VAR,Cd_UD)
+    CALL NC_READ_VAR(VAR)
+    CALL NC_DISCONNECT(VAR)
+
+  END SUBROUTINE LOAD_DRAG_COEFFICIENT
+!Siqi Li
 
 # if defined (SEDIMENT)
 
