@@ -506,6 +506,7 @@ MODULE CONTROL
 
     CHARACTER(LEN=80),parameter :: BR_ORIG   = 'orig'
     CHARACTER(LEN=80),parameter :: BR_GOTM   = 'gotm'
+    CHARACTER(LEN=80),parameter :: BR_UDEF   = 'udef'  !Added by Siqi Li@2015/08/29
 
     LOGICAL CONVECTIVE_OVERTURNING
     LOGICAL SCALAR_POSITIVITY_CONTROL
@@ -1428,9 +1429,7 @@ MODULE ALL_VARS
 
    REAL(SP), ALLOCATABLE,TARGET :: CBC(:)           !!BOTTOM FRICTION     
    REAL(SP), ALLOCATABLE,TARGET :: CC_Z0B(:)        !!BOTTOM ROUGHNESS VARIABLE
-!Jadon Ge
-   REAL(SP), ALLOCATABLE,TARGET :: NUNI_CBCMIN(:)    !! BOTTOM ROUGHNESS MINIMUM
-!Jadon Ge
+   REAL(SP), ALLOCATABLE,TARGET :: CBC_UD(:)        !!INPUT DRAG COEFFICIENT !Added by Siqi Li@2015/08/29
 
    REAL(SP), ALLOCATABLE,TARGET :: SWRAD_WATTS(:)  !!SURFACE INCIDENT RADIATION
    REAL(SP), ALLOCATABLE,TARGET :: WTSURF_WATTS(:) !!NET HEAT FLUX AT SURFACE
@@ -2052,10 +2051,7 @@ CONTAINS
 
    ALLOCATE(CBC(0:NT))           ;CBC    = ZERO     !!BOTTOM FRICTION     
    ALLOCATE(CC_Z0B(0:NT))        ;CC_Z0B = ZERO     !!BOTTOM ROUGHNESS VARIABLE     
-!Jadon Ge
-   ALLOCATE(NUNI_CBCMIN(0:NT))  ;NUNI_CBCMIN = ZERO !! BOTTOM ROUGHNESS MINIMUM
-!Jadon Ge
-   MEMCNT = NT*3*NDB + MEMCNT
+   ALLOCATE(CBC_UD(0:NT))        ;CBC_UD = ZERO     !!INPUT DRAG COEFFICIENT !added by Siqi Li@2015/08/29
 
 !# if !defined (SEMI_IMPLICIT)
    ALLOCATE(WUSURF2(0:NT))       ;WUSURF2= ZERO     !!SURFACE FRICTION FOR EXT
