@@ -140,7 +140,10 @@ Add heating type surface
 mod_input.F, vdif_ts.F
 
 Add wind_Stress methods
-mod_heatflux.F, mod_input.F,  mod_main.F, mod_ncdio.F, bcond_gcn.F, bcond_gcy.F
+mod_heatflux.F, mod_input.F,  mod_main.F, mod_ncdio.F, bcond_gcn.F, bcond_gcy.F	
 
 Update coare methods, especially air pressure in coare40
 coare26z.F, coare40vn.F, mod_force.F
+
+Add bottom roughness types
+brough.F, mod_input.F, mod_main.F, mod_setup.F
